--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -11,10 +11,8 @@
 <!---------------------------------------------------------------------------------------------------->
 <font size=+2 color=red>
   Please consider attending the  <a href="../../conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
-  which will be held at TAMU Friday-Saturday-Sunday March
- 28-30.
- 
-</font>
+  which will be held at TAMU Friday-Saturday-Sunday March 28&ndash;30.
+ </font>
 
 <!---------------------------------------------------------------------------------------------------->  
 <HR>
@@ -99,8 +97,11 @@ possibly concurrent.
        <li> <a href="https://arxiv.org/pdf/1601.05826.pdf">Descartes' Rule of Signs for Polynomial Systems Supported on Circuits</a>,
 	  Fr&eacute;d&eacute;ric Bihan and Alicia Dickenstein.
       </li>
-       <li> <a href="https://arxiv.org/pdf/2411.10776">Wronski Pairs of Honeycomb Curves</a>,
+      <li> <a href="https://arxiv.org/pdf/2411.10776">Wronski Pairs of Honeycomb Curves</a>,
 	  Laura Casabella, Michael Joswig, Rafael Mohr.
+      </li>
+      <li> <a href="https://link.springer.com/article/10.1007/BF02571929">A counterexamle to the strong real Jacobian conjecture</a>,
+	  S. Pinchuk, Math Z. <b>217</b> (1994) 1&ndash;4.
       </li>
       </ul>
    </td>
@@ -119,8 +120,8 @@ possibly concurrent.
      Hilbert's 1888 Theorem on positivity and sums of squares.</br>
      Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
      Present Macaulay2 Package RealRoots.<br>
-     Multivariate generalizations of stability of univariate polynomials.
-
+     Multivariate generalizations of stability of univariate polynomials.<br>
+     <font color=red>Many of the <FONT COLOR=AA00FF><EM>Sources</EM></FONT> above would be fine for a presentation.
 
    </td>
    
@@ -191,7 +192,7 @@ possibly concurrent.
 
 <HR>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Feb 27 07:57:38 CST 2025 by sottile</p>  
+<p>Last modified: Thu Feb 27 07:59:12 CST 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
