--- a/talks.html
+++ b/talks.html
@@ -149,10 +149,10 @@
   <!---------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
-    Geometry Seminar, 28 February 2025.
+    <FONT COLOR="AA00FF"><I>A Bestiary of Bloch Varieties</I></font>,
+    MPHA Seminar, 7 March 2025.
     Texas A&amp;M University.
-    <a href="talks/25/PGO4AG.txt">abstract</a>.
+    <a href="talks/25/Bestiary.html">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
@@ -161,6 +161,14 @@
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
 <ul>
  <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
+    Geometry Seminar, 28 February 2025.
+    Texas A&amp;M University.
+    <a href="talks/25/PGO4AG.txt">abstract</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
