--- a/conferences/TAGS25/abstracts.html
+++ b/conferences/TAGS25/abstracts.html
@@ -10,7 +10,7 @@
   <tr>
     <td>
         <a href="index.html"><h2>Texas Algebraic Geometry Symposium</h2></a><br>
-    Texas A&amp;M University 28 &ndash; 30 Mrch 2025.<br><br>
+    Texas A&amp;M University 28 &ndash; 30 March 2025.<br><br>
  
     <h3><font color=Maroon>Abstracts</font></h3>
     </td>
@@ -65,6 +65,79 @@
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
+    <td><a name="JM"></a><font size=+1>Joaquin Moraga</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Cluster type variety</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+Toric varieties are ubiquitous objects in algebraic geometry. A toric variety can be described  
+as a (partial) compactification of an algebraic torus such that the volume form of the torus has poles
+along every divisor added in the compactification. In this talk, we will introduce the concept of
+cluster type varieties which are (partial) compactifications of algebraic tori such that the volume form
+has at most poles and no zeros along the boundary. We will discuss many questions regarded 
+detecting these varieties and classifying them. 
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+
+
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="BH"></a><font size=+1>Brendan Hassett</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Rationality criteria for cubic hypersurfaces</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+      An algebraic variety is rational if it admits a birational parametrization by affine space.
+      We still do not know which cubic fourfolds are rational or how to prove that any are not rational!
+      We survey recent results&mdash;using classical geometry, Hodge theory, and newer techniques like derived
+      categories&mdash;as well as concrete open questions. 
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="AP"></a><font size=+1>Aaron Pixton</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Cycles on the moduli space of compact type curves</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+      The moduli space of compact type curves of genus <i>g</i> parametrizes stable algebraic curves with compact
+      Jacobian. 
+      I will discuss various algebraic cycles on this moduli space.
+      These cycles will belong to the (compact type) tautological ring, a subring of the Chow ring consisting of the
+      cycles that arise naturally in geometry through forgetful and gluing morphisms.
+      The structure of the tautological ring is unknown.
+      In 2000, Faber and Pandharipande stated a Gorenstein conjecture that would have fully determined its structure, but
+      in 2013 Petersen disproved this conjecture.
+      I will explain a recent idea of using certain boundary vanishing properties to describe new explicit counterexamples
+      to this Gorenstein conjecture. 
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+
+
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td><a name=""></a><font size=+1></font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2></font></td>
   </tr>
@@ -77,8 +150,6 @@
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
-
-
 
 </table>  
 
