--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -104,15 +104,40 @@ early-career participants. Request this with your registration. <br>
 
 <table>
   <tr>
+    <td><a name="BH"></a><font size=+1>Brendan Hassett</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Rationality criteria for cubic hypersurfaces</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td><a name="AH"></a><font size=+1>Amy Huang</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>Linear Spaces of Matrices of Bounded Rank</font></td>
   </tr>
-
-
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="JM"></a><font size=+1>Joaquin Moraga</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Cluster type variety</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="AP"></a><font size=+1>Aaron Pixton</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Cycles on the moduli space of compact type curves</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
 </table>
 <!-- Get the skeleton of the conference program from program.txt -->
 
-
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<table>
+  <tr>
+    <td>Friday dinner catered by Taz Indian restaurant</td>
+  </tr>
+  <tr>    
+    <td>Saturday conference dinner at Chef Cao's </td>
+  </tr>
+</table>
+  
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
