--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -107,7 +107,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!--  Schubert Ideals  -->
 <dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, CJ Bott Texas A&amp;M University.
+    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, Texas A&amp;M University.
 
 
 <!--  quot 2008  -->  
@@ -218,6 +218,10 @@ I have had the good fortune to work with the following mathematicians.
 <!-- Santalo 2006-->
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="https://en.wikipedia.org/wiki/Jacob_E._Goodman">Jacob (Eli) Goodman</A><sup>&#134;</sup>, CUNY.
+
+<!--  Propitious  -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF="https://math.hawaii.edu/wordpress/egross/">Elizabeth Gross</a>,  University of Hawai'i at Manoa.
   
 <!-- alphaCertified 2012  Newton 2012     PrimalDual 2014  KhRoDual 2014  -->
 <!-- NumGalois 2016       multiproj 2019  NNLA 2023       -->
@@ -356,6 +360,13 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/six.png">
      <a href="https://sites.google.com/site/mounirnisse1/">Mounir Nisse</a>, Xiamen University Malaysia.
 
+
+<!--  Propitious  -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF="https://www.ikennanometa.com/">Ikenna Nometa</a>,  University of Hawai'i at Manoa.
+  
+
+     
 <!-- hessian 2007 -->
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www.matem.unam.mx/personal/investigadores/viewA.php?eventNumber=64">Adriana Ortiz</A>, UNAM, Mexico. 
@@ -385,7 +396,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!-- SOS 2004 -->
 <dd><IMG SRC="images/dots/one.png">
-   <A HREF="http://www.mathcs.emory.edu/~vicki/">Victoria Powers</A>, Emory University.
+   <A HREF="http://www.mathcs.emory.edu/~vicki/">Victoria Powers<sup>&#134;</sup></A>, Emory University.
 
 <!-- horn 2008  Grasmannian 2009 -->
 <dd><IMG SRC="images/dots/two.png">
