--- a/talks/25/Bestiary.html
+++ b/talks/25/Bestiary.html
@@ -26,7 +26,7 @@
       whose projection to <b>R</b> is the spectrum of the operator.
       Features on Bloch varieties such as Dirac (double) points, critical points, and their level sets (Fermi varieties)
       reflect spectral properties of the operator.<br>
-      &nbsp; &nbsp; With students Faust and Robinison, and using the Brazos cluster, we investigated 
+      &nbsp; &nbsp; With students Faust and Robinson, and using the Brazos cluster, we investigated 
       <font color=red>over 2.1 million</font> small periodic graphs, recording invariants and features of their Bloch and Fermi varieties.
       In this talk, I will briefly discuss the background and present some examples of interesting behavior of Bloch varieties that we uncovered. 
   </td></tr>
