--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -117,7 +117,7 @@ possibly concurrent.
  </TR>
  <tr>
    <td colspan=4>Suggested topics for presentations:<br>
-     Hilbert's 1888 Theorem on positivity and sums of squares.</br>
+     Hilbert's 1888 Theorem on positivity and sums of squares. John Ajayo and Marleigh Purgar-Mcdonald</br>
      Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
      Present Macaulay2 Package RealRoots.<br>
      Multivariate generalizations of stability of univariate polynomials.<br>
