--- a/conferences/TAGS25/abstracts.html
+++ b/conferences/TAGS25/abstracts.html
@@ -138,6 +138,55 @@ detecting these varieties and classifying them.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
+    <td><a name="PS"></a><font size=+1>Padmavathi Srinivasan</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>A canonical algebraic cycle associated to a curve in its Jacobian</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+      The Ceresa cycle is a canonical homologically trivial algebraic cycle associated to a curve in its Jacobian.
+      In his 1983 thesis, Ceresa showed that this cycle is algebraically nontrivial for the generic curve over genus at
+      least 3.
+      Strategies for proving Fermat curves have infinite order Ceresa cycles due to B. Harris, Bloch,
+      Bertolini&dash;Darmon&dash;Prasanna, Eskandari&dash;Murty use a variety of ideas ranging from computation of explicit
+      iterated period integrals, special values of <i>p</i>-adic <i>L</i> functions and points of infinite order on the
+      Jacobian of Fermat curves.
+      We will survey many recent results around the Ceresa cycle, and present work with Jordan Ellenberg and Adam Logan
+      where we produce many new explicit examples of curves over number fields with infinite order Ceresa cycles.  
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="KK"></a><font size=+1>Kimoi Kemboi</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Full exceptional collections via window categories</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+      Derived categories are an important invariant for algebraic varieties.
+      This talk will explore a particular structure of derived categories called a full exceptional collection.
+      We will discuss the landscape of full exceptional collections and their connections to geometry.
+      Using ideas from window categories and equivariant geometry, I will explain how to produce full exceptional
+      collections of tautological bundles for a large class of projective linear GIT quotients by reductive groups of arbitrary rank. 
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+
+
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td><a name=""></a><font size=+1></font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2></font></td>
   </tr>
