--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -42,6 +42,9 @@
   &nbsp;  <a href="https://www.math.brown.edu/bhassett/">Brendan Hassett</a>      &nbsp;
              Brown University <br>
  
+  &nbsp;  <a href=""></a>Amy Huang              &nbsp;
+                 Texas A&amp;M University <br>  
+ 
   &nbsp;  <a href="https://kimoitoek.github.io/">Kimoi Kemboi</a>           &nbsp;
              Princeton University <br>    
 
@@ -56,10 +59,6 @@
 
   &nbsp;  <a href="https://padmask.github.io/">Padma Srinivasan</a>              &nbsp;
              Boston University <br>
-	    
- 
- &nbsp; <a href=""></a>Amy Huang              &nbsp;
-                 Texas A&amp;M University <br>  
  
    </td>
   </tr>
@@ -114,6 +113,11 @@ early-career participants. Request this with your registration. <br>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
+    <td><a name="KK"></a><font size=+1>Kimoi Kemboi</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Full exceptional collections via window categories</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td><a name="JM"></a><font size=+1>Joaquin Moraga</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>Cluster type variety</font></td>
   </tr>
@@ -121,6 +125,11 @@ early-career participants. Request this with your registration. <br>
   <tr>
     <td><a name="AP"></a><font size=+1>Aaron Pixton</font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2>Cycles on the moduli space of compact type curves</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><a name="PS"></a><font size=+1>Padmavathi Srinivasan</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>A canonical algebraic cycle associated to a curve in its Jacobian</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 </table>
