--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -119,6 +119,8 @@ possibly concurrent.
    <td colspan=4>Suggested topics for presentations:<br>
      Hilbert's 1888 Theorem on positivity and sums of squares. John Ajayo and Marleigh Purgar-Mcdonald</br>
      Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
+     "Newton-Okounkov bodies of chemical reaction systems" by Obatake and Walker. &nbsp; &nbsp;  Jordy Lopez and Paul Dessauer.<br>
+     Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz <br><br>
      Present Macaulay2 Package RealRoots.<br>
      Multivariate generalizations of stability of univariate polynomials.<br>
      <font color=red>Many of the <FONT COLOR=AA00FF><EM>Sources</EM></FONT> above would be fine for a presentation.
@@ -192,7 +194,7 @@ possibly concurrent.
 
 <HR>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Feb 27 07:59:12 CST 2025 by sottile</p>  
+<p>Last modified: Tue Mar 18 10:16:57 CDT 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
