--- a/conferences/TAGS25/abstracts.html
+++ b/conferences/TAGS25/abstracts.html
@@ -187,13 +187,16 @@ detecting these varieties and classifying them.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><a name=""></a><font size=+1></font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2></font></td>
+    <td><a name="LMB"></a><font size=+1>Lucas Mason-Brown</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Some progress on the problem of the unitary dual</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td colspan=2>  </td><td width=800 colspan=3>
-
+One of the fundamental unsolved problems in representation theory and abstract harmonic analysis is to parameterize the set
+of unitary representations of a semisimple Lie group.
+In this talk, I will give a gentle introduction to this problem and then explain how ideas from algebraic geometry
+(e.g. symplectic singularities and Hodge theory) can help. 
     <br> <br>
     </td>
   </tr>
