--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -72,20 +72,14 @@
 <!---------------------------------------------------------------------------------------------
 <b><font size=+1 color=Maroon>Winner of the poster contest:</font>  &nbsp;</b>.  &nbsp; &nbsp; --------------------------->
 <!------------------------------------------------------------------------------------------------------------------------>
-<!-----------------------------------------------------------------------------------
-<b><font size=+1 color=Maroon>Runners up: &nbsp; &nbsp; </font>
-  Tomasz Mandziuk &nbsp;  and &nbsp; Suhan Zhong</b>.------------------------------------->
-<!------------------------------------------------------------------------------------------------------------------------>
 
 <!----------------------------------------------------------------------------------------------------->
-<hr>
-<!----------------------------------------------------------------------------------------------------->
-<b><a href=" https://docs.google.com/forms/d/e/1FAIpQLSft_h_rNb3AcT33FCp7f9LS6KaarlBl6509EjhBolPRS7fhSQ/viewform">Registration:</a>
+<b><a href=" https://docs.google.com/forms/d/e/1FAIpQLSft_h_rNb3AcT33FCp7f9LS6KaarlBl6509EjhBolPRS7fhSQ/viewform"></a>Registration:</b>
   We have limited support for travel and hotels during the meeting.
-  Please register by <font color=red>February 28</font> to ensure full consideration for funding.</b><br>
+  Please register by <font color=red></font>February 28 to ensure full consideration for funding.<br>
 
-<b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
-     with a prize for the best poster by a student or postdoc.<br>
+<!--<b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
+     with a prize for the best poster by a student or postdoc.<br> -->
 
 <b>Funding:</b> Conference attendance is supported by NSF grant DMS-2349244.
 We will have some support available to cover travel expenses and accommodation for graduate students and
@@ -95,49 +89,119 @@ early-career participants. Request this with your registration. <br>
 <!----------------------------------------------------------------------------------------------------->
 <hr>
 <!----------------------------------------------------------------------------------------------------->
-<!-- 
-
-
 <b>Conference Program</b>
-&nbsp; &nbsp;  &nbsp; &nbsp; --> <a href="abstracts.html"><b>Abstracts</b></a><br>
+   &nbsp; &nbsp;  &nbsp; &nbsp; <a href="abstracts.html"><b>Abstracts</b></a><br>
 
-<table>
-  <tr>
-    <td><a name="BH"></a><font size=+1>Brendan Hassett</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Rationality criteria for cubic hypersurfaces</font></td>
-  </tr>
+<table border=1 cellspacing="5">
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><th colspan=3 align=left> Friday, 28 March</th></tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><a name="AH"></a><font size=+1>Amy Huang</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Linear Spaces of Matrices of Bounded Rank</font></td>
+    <td>17:00&ndash;17:30 PM</td>
+    <td>Arrival and Registration</td>
+    <td>Ground floor of <a href="http://wikimapia.org/6170/John-R-Blocker-Building">Blocker Building</a></td>
   </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>17:30&ndash;18:30 </td>
+    <td>Catered Dinner on site</td><td>TAZ Indian Restaurant</td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>18:30&ndash;18:35 </td>
+    <td>Opening Remarks</td><td></td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>18:35&ndash;19:30 </td>
+    <td>Lucas Mason-Brown</td><td><a href="abstracts.html#LMB">Some progress on the problem of the unitary dual</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr><th colspan=3 align=left> Saturday, 29 March</th></tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><a name="KK"></a><font size=+1>Kimoi Kemboi</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Full exceptional collections via window categories</font></td>
+    <td> 8:30&ndash;9:00</td>
+    <td>Registration and Coffee </td><td></td>
   </tr>
-  <!---------------------------------------------------------------------------------------------------->
+   <tr>
+    <td> 9:00&ndash;9:55</td>
+    <td> Aaron Pixton </td><td><a href="abstracts.html#AP">Cycles on the moduli space of compact type curves</a></td>
+  </tr>
   <tr>
-    <td><a name="JM"></a><font size=+1>Joaquin Moraga</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Cluster type variety</font></td>
+    <td> 10:00&ndash;10:30</td>
+    <td>  Break </td><td></td>
   </tr>
-  <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><a name="AP"></a><font size=+1>Aaron Pixton</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Cycles on the moduli space of compact type curves</font></td>
+    <td> 10:30&ndash;11:30</td>
+    <td> Kimoi Kemboi </td><td><a href="abstracts.html#KK">Full exceptional collections via window categories</a></td>
   </tr>
-  <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><a name="PS"></a><font size=+1>Padmavathi Srinivasan</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>A canonical algebraic cycle associated to a curve in its Jacobian</font></td>
+    <td> 11:30&ndash;11:45</td>
+    <td>  Students meet with speakers</td><td>Blocker 166</td>
+  </tr>
+   <tr>
+    <td> 11:45&ndash;14:30</td>
+    <td>  Lunch &nbsp; </td><td>Local Restaurants</td>
+  </tr>
+  <tr>
+    <td> 14:30&ndash;15:25</td>
+    <td> Padmavathi Srinivasan </td><td><a href="abstracts.html#PS">A canonical algebraic cycle associated to a curve in its Jacobian</a></td>
+  </tr>
+  <tr>
+    <td> 15:30&ndash;16:00</td>
+    <td> Break </td><td></td>
+  </tr>
+  <tr>
+    <td> 16:00&ndash;16:55</td>
+    <td> Brendan Hassett </td><td><a href="abstracts.html#BH">Rationality criteria for cubic hypersurfaces</a></td>
+  </tr>
+  <tr>
+    <td> 17:00&ndash;17:15</td>
+    <td>   Students meet with speakers </td><td></td>
+  </tr>
+  <tr>
+    <td> 19:00&mdash;  </td>
+    <td>      Dinner at local restaurant: </td><td>Chef Cao's</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
+  <tr><th colspan=3 align=left> Sunday, 30 March</th></tr>
+  <!---------------------------------------------------------------------------------------------------->
+   <tr>
+    <td> 8:30&ndash;9:00</td>
+   <td> Coffee </td><td></td>
+  </tr> 
+   <tr>
+    <td> 9:00&ndash;9:55</td>
+    <td> Amy Huang </td><td><a href="abstracts.html#AH">Linear Spaces of Matrices of Bounded Rank</a></td>
+  </tr>
+  <tr>
+    <td> 10:00&ndash;11:30</td>
+    <td> Break </td><td></td>
+  </tr>
+  <tr>
+    <td>  10:30&ndash;11:25</td>
+    <td> Joaquin Moraga </td><td><a href="abstracts.html#JM">Cluster type variety</a></td>
+  </tr>
+
+  <tr>
+    <td>  11:30&ndash;11:35</td>
+    <td> Closing Remarks </td><td></td>
+  </tr>
+ <tr>
+     <td> 11:35&ndash;11:50</td>
+    <td>   Students meet with speakers </td><td></td>
+  </tr>
+
+
 </table>
-<!-- Get the skeleton of the conference program from program.txt -->
+
+
+
 
 <!---------------------------------------------------------------------------------------------------->
-<hr>
+<!--  <hr>  -->
 <!---------------------------------------------------------------------------------------------------->
+<!--------------------------------------------------
 <table>
   <tr>
     <td>Friday dinner catered by Taz Indian restaurant</td>
@@ -146,7 +210,7 @@ early-career participants. Request this with your registration. <br>
     <td>Saturday conference dinner at Chef Cao's </td>
   </tr>
 </table>
-  
+  -------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
