--- a/conferences/TAGS25/local.html
+++ b/conferences/TAGS25/local.html
@@ -52,15 +52,16 @@
       There will also be a dinner provided to participants on Friday between 6:30 PM and 7:30 PM, and a conference dinner on Saturday.
     </td>
   </tr>
-  <!-------------------------------------------------->
+  <!-------------
   <tr valign=top>
     <td><b><font color=Maroon>Posters:</font></b></td>
-    <td>There will be a poster session and reception Saturday<!--between 4 PM and 6:30 PM-->.
+    <td>There will be a poster session and reception Saturday between 4 PM and 6:30 PM.
       A prize will be awarded to the best poster as decided by a jury.<br>
       Poster size is 36 inches by 48 inches (91.4 &times; 122 cm).
       A list of presenters, titles, and abstracts are found on the <a href="posters.html"></a>posters page.</td>
   </tr>
-
+  ------------------------------------->
+  
   </table>
 
   
