--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -120,7 +120,8 @@ possibly concurrent.
      Hilbert's 1888 Theorem on positivity and sums of squares. John Ajayo and Marleigh Purgar-Mcdonald</br>
      Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
      "Newton-Okounkov bodies of chemical reaction systems" by Obatake and Walker. &nbsp; &nbsp;  Jordy Lopez and Paul Dessauer.<br>
-     Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz <br><br>
+     Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz <br>
+     The Shapiro Conjecture and the Wronski map.  &nbsp; &nbsp; C.J. Bott and Daniel Dale<br>
      Present Macaulay2 Package RealRoots.<br>
      Multivariate generalizations of stability of univariate polynomials.<br>
      <font color=red>Many of the <FONT COLOR=AA00FF><EM>Sources</EM></FONT> above would be fine for a presentation.
