--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -100,7 +100,7 @@ possibly concurrent.
       <li> <a href="https://arxiv.org/pdf/2411.10776">Wronski Pairs of Honeycomb Curves</a>,
 	  Laura Casabella, Michael Joswig, Rafael Mohr.
       </li>
-      <li> <a href="https://link.springer.com/article/10.1007/BF02571929">A counterexamle to the strong real Jacobian conjecture</a>,
+      <li> <a href="https://link.springer.com/article/10.1007/BF02571929">A counterexample to the strong real Jacobian conjecture</a>,
 	  S. Pinchuk, Math Z. <b>217</b> (1994) 1&ndash;4.
       </li>
       </ul>
@@ -122,6 +122,8 @@ possibly concurrent.
      "Newton-Okounkov bodies of chemical reaction systems" by Obatake and Walker. &nbsp; &nbsp;  Jordy Lopez and Paul Dessauer.<br>
      Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz <br>
      The Shapiro Conjecture and the Wronski map.  &nbsp; &nbsp; C.J. Bott and Daniel Dale<br>
+     A counterexample to the strong real Jacobian Conjecture.  &nbsp; &nbsp; Kevin Le and Jonah Robinson.<br>
+     Sums of squares and minimal varieties.   &nbsp; &nbsp; Somak Dutta and Ruzho Sagayaraj.<br>
      Present Macaulay2 Package RealRoots.<br>
      Multivariate generalizations of stability of univariate polynomials.<br>
      <font color=red>Many of the <FONT COLOR=AA00FF><EM>Sources</EM></FONT> above would be fine for a presentation.
