--- a/conferences/TAGS25/abstracts.html
+++ b/conferences/TAGS25/abstracts.html
@@ -66,7 +66,7 @@
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td><a name="JM"></a><font size=+1>Joaquin Moraga</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2>Cluster type variety</font></td>
+    <td><font size=+1 color=Purple colspan=2>Cluster type varieties</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
