--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -160,7 +160,7 @@ early-career participants. Request this with your registration. <br>
     <td>   Students meet with speakers </td><td></td>
   </tr>
   <tr>
-    <td> 19:00&mdash;  </td>
+    <td> 18:30&mdash;  </td>
     <td>      Dinner at local restaurant: </td><td>Chef Cao's</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -180,7 +180,7 @@ early-career participants. Request this with your registration. <br>
   </tr>
   <tr>
     <td>  10:30&ndash;11:30</td>
-    <td> Joaquin Moraga </td><td><a href="abstracts.html#JM">Cluster type variety</a></td>
+    <td> Joaquin Moraga </td><td><a href="abstracts.html#JM">Cluster type varieties</a></td>
   </tr>
 
   <tr>
