--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
   <TR valign=top>
     <td colspan=2><b>News:</b>
 
+      I was recently elected as a
+      <a href="https://www.siam.org/publications/siam-news/articles/siam-announces-2025-class-of-fellows/">member of the
+	2025 class of Fellows of the SIAM</a>, and as a
+      <a href="https://www.aaas.org/programs/fellows/2024-aaas-fellows">member of the 2024 class of Fellows of the American
+      Association for the Advancement of  Science</a>.
+      The College of Arts and Science has an article about these fellowships.<br>
+
+      
       I am helping to organize a program at the <a href="https://www.ipam.ucla.edu/">IPAM</a>
       on <font color="AA00FF">Numerical Algebraic Geometry and Correlated Electrons:  Generalized Grassmannians, Response Functions and
       Excited States</font>.  This will occur from 8 March to 11 June 2027.<br>
@@ -321,8 +329,8 @@
     <TD colspan=2>
       <!---------------------------------------------------------------------------->
       &nbsp; I am one of the corresponding editors for the SIAM Journal on Applied Algebra and Geometry.<br>
-      &nbsp; I am an Associate Editor for the American Mathematical Monthly.<br>
-      &nbsp; I am an Associate Editor for the Arnold Mathematical Journal.
+      &nbsp; I am an Associate Editor for the American Mathematical Monthly, the Arnold Mathematical Journal, and the
+      Journal of the Foundations of Computational Mathematics. 
     </td>
     </tr>
    <!---------------------------------------------------------------------------->
