--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -90,7 +90,8 @@ early-career participants. Request this with your registration. <br>
 <hr>
 <!----------------------------------------------------------------------------------------------------->
 <b>Conference Program</b>
-   &nbsp; &nbsp;  &nbsp; &nbsp; <a href="abstracts.html"><b>Abstracts</b></a><br>
+   &nbsp; &nbsp;  &nbsp; &nbsp; <a href="abstracts.html"><b>Abstracts</b></a> 
+   &nbsp; &nbsp;  &nbsp; &nbsp; All talks in Blocker 166.<br>
 
 <table border=1 cellspacing="5">
   <!---------------------------------------------------------------------------------------------------->
@@ -157,7 +158,7 @@ early-career participants. Request this with your registration. <br>
   </tr>
   <tr>
     <td> 17:00&ndash;17:15</td>
-    <td>   Students meet with speakers </td><td></td>
+    <td>   Students meet with speakers </td><td>Blocker 166</td>
   </tr>
   <tr>
     <td> 18:30&mdash;  </td>
@@ -189,7 +190,7 @@ early-career participants. Request this with your registration. <br>
   </tr>
  <tr>
      <td> 11:35&ndash;11:50</td>
-    <td>   Students meet with speakers </td><td></td>
+    <td>   Students meet with speakers </td><td>Blocker 166</td>
   </tr>
 
 
@@ -223,8 +224,8 @@ Patricia Klein and Frank Sottile (Texas A&amp;M).<br>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-TAGS 2025 is supported in part by NSF grant DMS-2349244 <!--, as well as the Department of Mathematics and
-the College of Arts and Sciences at Texas A&amp;M University.-->
+TAGS 2025 is supported in part by NSF grant DMS-2349244, as well as the Department of Mathematics and
+the College of Arts and Sciences at Texas A&amp;M University. <!--  -->
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
