--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -74,7 +74,7 @@
 <!------------------------------------------------------------------------------------------------------------------------>
 
 <!----------------------------------------------------------------------------------------------------->
-<b><a href=" https://docs.google.com/forms/d/e/1FAIpQLSft_h_rNb3AcT33FCp7f9LS6KaarlBl6509EjhBolPRS7fhSQ/viewform"></a>Registration:</b>
+<b><a href=" https://docs.google.com/forms/d/e/1FAIpQLSft_h_rNb3AcT33FCp7f9LS6KaarlBl6509EjhBolPRS7fhSQ/viewform">Registration:</a></b>
   We have limited support for travel and hotels during the meeting.
   Please register by <font color=red></font>February 28 to ensure full consideration for funding.<br>
 
