--- a/Frank.html
+++ b/Frank.html
@@ -6,24 +6,28 @@
 <table>
  <tr valign=top>
    <td>
-    <a href="Frank.html"><IMG height=300 SRC="images/frank/frank_23.jpg" ALT="Grand Canyon on 60th Birthday"></a><br>
+    <IMG height=300 SRC="images/frank/frank_KB_25.jpg" ALT="Mit Klein Flasche"><br>
+     Mit Klein Flasche<br>March 2025
+  </td>
+   <td>
+    <IMG height=300 SRC="images/frank/frank_23.jpg" ALT="Grand Canyon on 60th Birthday"><br>
      Grand Canyon Hike<br>March 2023
   </td>
    <td>
-    <a href="Frank.html"><IMG height=300 SRC="images/frank/frank_22.jpg" ALT="Dead Tree in Davis Mountains with arm sling"></a><br>
+    <IMG height=300 SRC="images/frank/frank_22.jpg" ALT="Dead Tree in Davis Mountains with arm sling"><br>
      Tree in Davis Mountains with<br> Arm Sling, March 2022
   </td>
    <td>
-    <a href="Frank.html"><IMG height=300 SRC="images/frank/frank_20.jpg" ALT="Giant White Squill"></a><br>
+    <IMG height=300 SRC="images/frank/frank_20.jpg" ALT="Giant White Squill"></a><br>
      With Giant White Squill, August 2020
-  </td>
- <td>
-    <a href="Frank.html"><IMG SRC="images/frank/frank_19J.jpg" ALT="Andorra June 2019"></a><br>
-     &nbsp; &nbsp;Vall del Madriu-Perafita-Claror, June 2019
   </td>
  </tr>
  <!---------------------------------------->
  <tr valign=top>
+  <td>
+    <IMG SRC="images/frank/frank_19J.jpg" ALT="Andorra June 2019"><br>
+     &nbsp; &nbsp;Vall del Madriu-Perafita-Claror, June 2019
+  </td>
   <td>
     <IMG SRC="images/frank/frank_19_square.jpg" alt="BIRS 2019"><BR>
     In Banff 2019
@@ -32,13 +36,13 @@
     <IMG SRC="images/frank/frank_17.jpg" alt="CIMPA School in Ibadan 2017"><BR>
     &nbsp; &nbsp; CIMPA School in Ibadan 2017.  Photo: Olanrewaju Johnson
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_16_square.jpg" alt="Blackcomb Glacier Cave 2016"><BR>
     Blackcomb Glacier Cave 2016
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_15.jpg" alt="Alpe de Suisi 2015"><BR>
     Alpe de Suisi 2015
@@ -47,13 +51,13 @@
     <IMG SRC="images/frank/frank_14.jpg" alt="Hawaii 2014"><BR>
      &nbsp; &nbsp;Hawaii Lava 2014
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_13.jpg" alt="Yosemite 2013"><BR>
     Yosemite 2013
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_12.jpg" alt="Sokoto, Nigeria, 2012"><BR>
     Sokoto, Nigeria, 2012
@@ -66,13 +70,13 @@
     <IMG SRC="images/frank/frank_sauna.jpg" alt="MSRI in 1996"><BR>
     Lake M&auml;leren 2011
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_10.jpg" alt="Sunshine 2010"><BR>
    Banff 2010
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_09.jpg" alt="Innsbruck 2009"><BR>
    Innsbruck 2009
@@ -85,13 +89,13 @@
    <IMG SRC="images/frank/frank_06.jpg" alt="TUM in 2006"><BR>
    M&uuml;nchen 2006
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_04.jpg" alt="Banff in 2004"><BR>
    Banff 2004
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_01.UM.jpg" alt="U Mich visit in 2001"><BR>
    Talk at U Michigan 2001
@@ -104,7 +108,9 @@
    <IMG SRC="images/frank/frank_99.jpg" alt="Wisconsin in 1999"><BR>
    Wisconsin 1999
   </td>
-   <!-------------------------------------------------->
+  </tr>
+ <!---------------------------------------->
+ <tr valign=top>
    <td>
     <IMG SRC="images/frank/frank_96.jpg" alt="MSRI in 1996"><BR>
     MSRI in 1996
